[tool.poetry]
name = "containerpkg"
version = "0.1.0"
description = ""
authors = ["DrgnFireYellow"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
docker = "^7.0.0"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
